Fix Cupertino text color on tablet

--- a/src/elements/cupertino-mobile.scss
+++ b/src/elements/cupertino-mobile.scss
@@ -81,6 +81,11 @@ body.input-cupertino.is-mobile {
   .bases-cards-label {
     padding: 0;
   }
+
+  // File explorer
+  .nav-files-container > div {
+    --nav-item-color: var(--text-normal);
+  }
 }
 
 body.input-cupertino.is-phone {
